tests/baselines/reference/tsxAttributeResolution16.errors.txt
file.tsx(1,1): error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.


==== file.tsx (1 errors) ====
    import React = require('react');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
    
    interface Address {
      street: string;
      country: string;
    }
    
    interface CanadianAddress extends Address {
        postalCode: string;
    }
    
    interface AmericanAddress extends Address {
        zipCode: string;
    }
    
    type Properties = CanadianAddress | AmericanAddress;
    
    export class AddressComp extends React.Component<Properties, void> {
      public render() {
        return null;
      }
    }
    
    let a = <AddressComp postalCode='T1B 0L3' street="vancouver" country="CA" />